--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a-marker type="pattern" url="marker.patt">
         <!-- ВАША 3D-МОДЕЛЬ -->
         <a-entity
-          gltf-model="model/object.gltf"
+          gltf-model="object.gltf"
           scale="0.5 0.5 0.5"
           position="0 0 0"
           rotation="0 0 0"
@@ -39,4 +39,5 @@
       <a-entity camera></a-entity>
     </a-scene>
   </body>
+
 </html>
