--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>AR Card Project</title>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>AR Demo</title>
 
-    <!-- A-Frame -->
-    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+  <!-- A-Frame -->
+  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 
-    <!-- AR.js for A-Frame -->
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
+  <!-- AR.js -->
+  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
 
-    <style>
-      body, html {
-        margin: 0;
-        overflow: hidden;
-      }
-    </style>
-  </head>
+  <style>
+    body, html {
+      margin: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
 
-  <body>
-    <a-scene
-      embedded
-      renderer="logarithmicDepthBuffer: true;"
-      vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
-      <!-- Маркер -->
-      <a-marker type="pattern" url="marker.patt">
-        <!-- ВАША 3D-МОДЕЛЬ -->
-        <a-entity
-          gltf-model="object.gltf"
-          scale="0.5 0.5 0.5"
-          position="0 0 0"
-          rotation="0 0 0"
-        ></a-entity>
-      </a-marker>
+    <!-- Маркер -->
+    <a-marker type="pattern" url="marker.patt">
+      <!-- 3D-модель -->
+      <a-entity
+        gltf-model="object.gltf"
+        scale="0.5 0.5 0.5"
+        position="0 0 0"
+        rotation="0 0 0"
+      ></a-entity>
+    </a-marker>
 
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+    <!-- Камера -->
+    <a-entity camera></a-entity>
 
+  </a-scene>
+</body>
 </html>
+
