--- a/index.html
+++ b/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>AR Cube Test</title>
-
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-
-  <!-- AR.js -->
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
-
-  <style>
-    body, html {
-      margin: 0;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+  <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+  <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 </head>
-<body>
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
 
-    <!-- Маркер -->
-    <a-marker type="pattern" url="marker.patt">
-      <!-- Красный куб вместо модели -->
-      <a-box position="0 0.5 0" scale="0.5 0.5 0.5" color="red"></a-box>
+<body style="margin: 0; overflow: hidden;">
+
+  <a-scene embedded arjs="patternRatio: 0.7">
+
+    <a-marker 
+      type="pattern" 
+      url="marker.patt">
+
+      <a-box 
+        position="0 0.5 0" 
+        material="opacity: 0.5; color: red;">
+      </a-box>
+
     </a-marker>
 
-    <!-- Камера -->
     <a-entity camera></a-entity>
 
   </a-scene>
+
 </body>
+
 </html>
