--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 </head>
 
-<body style="margin: 0; overflow: hidden;">
+<body style="margin: 0; overflow: scroll;">
 
   <a-scene embedded arjs="patternRatio: 0.7">
 
@@ -28,3 +28,4 @@
 </body>
 
 </html>
+
